# Revo-Contracts

./: Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
ContractsRevo/PurchaseReviewContract/: Cargo.toml
ContractsRevo/RatingSystemContract/: Cargo.toml
ContractsRevo/RatingSystemContract/src/: datatypes.rs  history.rs  lib.rs  rating.rs  reputation.rs
ContractsRevo/TransactionNFTContract/: Cargo.toml
ContractsRevo/purchase-review-contract/: Cargo.toml
ContractsRevo/rating-system-contract/: Cargo.toml
ContractsRevo/rating-system-contract/src/: datatypes.rs  history.rs  lib.rs  rating.rs  reputation.rs  test.rs
ContractsRevo/transaction-nft-contract/: Cargo.toml
ContractsRevo/transaction-nft-contract/src/: lib.rs  metadata.rs  mint.rs  proof.rs  test.rs
