[workspace]
members = [
    "ContractsRevo/example-contract",
    "ContractsRevo/purchase-review-contract",
    "ContractsRevo/rating-system-contract",
    "ContractsRevo/transaction-nft-contract",
]

[workspace.dependencies]
soroban-sdk = "22.0.0-rc.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true