[package]
name = "transaction-nft-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-env-common = { version = "22.0.0-rc.3" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
